FIxed spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
