--- a/src/components/card/cardComponentStyle.scss
+++ b/src/components/card/cardComponentStyle.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   text-align: center;
+  align-items: center;
   width: 100%;
   margin: 30px 0px;
 
@@ -13,6 +14,7 @@
   box-shadow: 1px 15px 20px rgba(134, 129, 129, 0.7);
   border-radius: 15px;
   transition: all 2s;
+  max-width: 550px;
 
   .card-img-top {
     border-radius: 15px 15px 50px 0px;
