--- a/src/components/newsComponent/newsComponentStyle.scss
+++ b/src/components/newsComponent/newsComponentStyle.scss
@@ -62,7 +62,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 55%;
+    width: 100%;
     margin: 10px;
     text-align: left;
     animation: moveInRight 2s ease-out;
@@ -94,6 +94,7 @@
     line-height: 2em;
     line-height: 1.6em;
     letter-spacing: 0.2em;
+    width: 70%;
   }
 }
 
