--- a/src/components/newsletterComponent/newsletterComponentStyle.scss
+++ b/src/components/newsletterComponent/newsletterComponentStyle.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
+  width: 100%;
   & form {
     padding: 25px;
     width: 100%;
